Resolve the pagination and the legend alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,3 @@
-// Overall container that reflects the Figma visual design
 .dashboard {
   color: #031050 50%;
   background-color: #f4f6f8;
@@ -50,6 +49,19 @@
         border-radius: 50%;
       }
     }
+  }
+
+  .details-btn {
+      flex: 1 1 auto;
+      margin: 0 0.5rem;
+      padding: 0.4rem 1rem 0.4rem 1rem;
+      text-align: center;
+      color: white;
+      text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 0 20px #eee;
+      border-color: #5E33CE;
+      border-radius: 30px;
+      background-color: #5E33CE;
   }
 
   .table-ctrls {
@@ -148,7 +160,6 @@
     }
 
     .table-container {
-      background-color: #fff;
       padding: 0 1rem;
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
